# JBHack

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README1.md  STORYBOARD.md  package.json  pnpm-lock.yaml  security-policy.md
apps/agent/: pyproject.toml
apps/agent/src/: __init__.py  autopilot.py  codex_analysis.py  codex_client.py  config.py  dep_check.py  github_client.py  ide_launcher.py  main.py  models.py  prompt_builder.py  sandbox_runner.py  sentry_client.py  storage.py  validator.py
apps/agent/tests/: smoke_open_in_ide.py  test_analysis.py  test_autopilot.py  test_codex_analysis.py  test_codex_client.py  test_config.py  test_dep_check.py  test_github_fetch.py  test_github_pr.py  test_ide_launcher.py  test_ingress.py  test_models_secureloop_extra.py  test_pipeline_events.py  test_pipeline_snapshot.py  test_sandbox_runner.py  test_sse_stream.py  test_validator.py  test_webhook_dispatch.py
apps/dashboard/: next.config.ts  package.json
apps/dashboard/app/: globals.css  incident-stream.tsx  layout.tsx  page.tsx  pipeline-progress.tsx  types.ts
apps/dashboard/app/session/[id]/: page.tsx  session-pipeline-live.tsx
apps/jetbrains-plugin/: README.md  build.gradle.kts  settings.gradle.kts
apps/jetbrains-plugin/src/main/kotlin/dev/secureloop/plugin/model/: AnalysisModels.kt  AnalysisResponse.kt  EnvironmentState.kt  (+5 more)
apps/jetbrains-plugin/src/main/resources/: security-policy.md
docs/: AGENT_CONTEXT.md  DESIGN_DOC.md  LOCAL_DEMO_RUNBOOK.md  PLUGIN_TESTING.md  demo-script.md
docs/plans/: github-repo-normalization.md
seed/: schema.sql  seed.sql
(+11 files in other folders)
